--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "who-i-am",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://aliahsan09.github.io/who-i-am/",
   "dependencies": {
     "@fontsource/poppins": "^5.2.5",
     "@fontsource/roboto": "^5.2.5",
@@ -19,7 +20,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -40,7 +43,6 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^6.3.0",
     "tailwindcss": "^3.4.17"
   }
 }
